--- a/ANN_model_for_Image_Classification_in_Tensorflow_.ipynb
+++ b/ANN_model_for_Image_Classification_in_Tensorflow_.ipynb
@@ -4,8 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyP83agJCUJqeQz/H8WFS6Yn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,6 +40,30 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nPbHkKrxN-N6",
+        "outputId": "b0ab1493-61c8-495d-b126-f077542dd3ae"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Importing libraries"
@@ -52,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "aCFU5J_I3Hrx"
       },
@@ -83,7 +105,7 @@
       "metadata": {
         "id": "LoYktAJlEKZJ"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -98,7 +120,7 @@
         "id": "Xkb4fCTMEtDC",
         "outputId": "a885a927-7b2d-4dad-de6b-9f6845dcbe3a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -124,7 +146,7 @@
         "id": "_-lCvRElE1mo",
         "outputId": "f276d1bf-afc8-43ad-d2ec-1e9277c6389b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +170,7 @@
         "id": "BnmHKJZ6FZ-Z",
         "outputId": "43d597f0-5eec-47e2-c49b-f49614e5b9cd"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -269,7 +291,7 @@
       "metadata": {
         "id": "moQ5ZsobGdgn"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -284,7 +306,7 @@
         "id": "wkUiRYQ4I5YY",
         "outputId": "525f8a49-74ff-499b-809e-3abbe26a5336"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -310,7 +332,7 @@
         "id": "xTAZrP2hh-dw",
         "outputId": "ef0bda1e-72c7-4afb-dc6a-8986174a3a40"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -336,7 +358,7 @@
         "id": "O67Ghz5viibv",
         "outputId": "dc2ee058-1e23-4576-bb61-fc862e767d1b"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -446,7 +468,7 @@
         "id": "QqW8pjXBipuA",
         "outputId": "2fb5681b-03ff-4f1e-8378-cd7e0b4016d3"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -486,7 +508,7 @@
         "id": "wmddkH5s4xoQ",
         "outputId": "5f2a52ea-9feb-4c8d-ad04-4d77d2efe4ad"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -622,7 +644,7 @@
         "id": "Yh7sMeRM49G_",
         "outputId": "dd49ad96-33ea-4fab-f72d-907a8e7459f9"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -648,7 +670,7 @@
         "id": "maC6OT9n5BHw",
         "outputId": "ceb2ca64-86ad-40e8-c568-7e8441aea68e"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -674,7 +696,7 @@
         "id": "z1jN70z85DHn",
         "outputId": "bd00a4b0-91b6-4b63-c3c8-4d84e65cb5e9"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -700,7 +722,7 @@
         "id": "5hgyZk5_5GHh",
         "outputId": "30002d5c-3318-4389-a45a-b9420ad97111"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -723,7 +745,7 @@
       "metadata": {
         "id": "62EhZWYM5Kow"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -738,7 +760,7 @@
         "id": "9MT1IE995YbT",
         "outputId": "4077dcc1-ae47-4be2-be05-cb0c8a088f1e"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -772,7 +794,7 @@
       "metadata": {
         "id": "UZazAK915klX"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -786,7 +808,7 @@
         "          ),\n",
         "    #2nd hidden layer\n",
         "    Dense(units=20,\n",
-        "          \n",
+        "\n",
         "          activation ='sigmoid'\n",
         "          )\n",
         "])\n",
@@ -800,7 +822,7 @@
       "metadata": {
         "id": "KhMvub4I6m2U"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -833,7 +855,7 @@
         "id": "z36U_6yf8bMo",
         "outputId": "35b5d516-ff54-47f3-f6d2-64c963333040"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -905,7 +927,7 @@
         "id": "0rQlqcvJ89EY",
         "outputId": "ec1d7b72-4f0d-45de-da19-c7bb6d06dd1f"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -928,7 +950,7 @@
         "id": "bUAvqg639LU_",
         "outputId": "084058ed-a29b-4dfa-906a-04537d4fc46a"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -975,7 +997,7 @@
         "id": "yj3TUZCE9VHq",
         "outputId": "dced7397-b9fa-4ee0-a334-e948e36fa934"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
